# neuron-toolkit

./: .coverage  FUTURE_ROADMAP.md  README.md  mkdocs.yml  pyproject.toml  scratch.py
FUTURE/: Fusion.md  Futurefeatures.md  Futurefeatures2.md  Futurefeatures3.md  Futurefeatures4.md  Futurefeatures5.md  Futurefeatures6.md  Futurefeatures7.md
docs/: cookbook.md  detector.md  getting_started.md  index.md  parser.md  pattern.md  query.md  rewriter.md
docs/javascripts/: extra.js
docs/stylesheets/: extra.css
src/neuron_toolkit/: __init__.py  _types.py  _utils.py  graph.py  parser.py  rewriter.py
src/neuron_toolkit/backends/: __init__.py  base.py
src/neuron_toolkit/backends/onnx/: parser.py  rewriter.py  utils.py
src/neuron_toolkit/backends/tflite/: opt_activation.py  opt_arithmetic.py  opt_control_flow.py  opt_logical.py  opt_misc.py  opt_nn.py  opt_reduction.py  opt_stablehlo.py  opt_tensor.py  parser.py  rewriter.py  utils.py
src/neuron_toolkit/pattern/: __init__.py  _activations.py  _matcher.py  detector.py  dsl.py  models.py
src/neuron_toolkit/query/: __init__.py  core.py
src/onnx_toolkit/: __init__.py  _types.py  _utils.py  graph.py  parser.py  pattern.py  query.py  rewriter.py
src/onnx_toolkit/pattern/: _activations.py  _matcher.py  detector.py  dsl.py  models.py
src/onnx_toolkit/query/: __init__.py  core.py
tests/: comprehensive_test.py  conftest.py  test_bug_non_commutative.py  test_detector_deep.py  test_dsl_deep.py  test_fusion.py  test_multibackend.py  test_parser.py  test_parser_deep.py  test_pattern.py  test_query.py  test_query_deep.py  test_rewriter.py  test_rewriter_deep.py  test_tflite_backend.py  test_utils_deep.py
