[project]
name = "onnx-toolkit"
version = "0.1.0"
description = "A unified ONNX parsing and pattern-matching library."
readme = "README.md"
authors = [
    { name = "Sheth Jenil", email = "shethjeniljigneshbhai@gmail.com" }
]

dependencies = ["onnx","numpy"]

[build-system]
requires = ["uv_build>=0.10.11,<0.11.0"]
build-backend = "uv_build"
